--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -14,7 +14,7 @@ body {
   z-index: -9999;
   background-size: 550px;
   background-position: -100px -100px;
-  background-image: url("https://ac.blooket.com/dashboard/assets/BlookCheckers-BykpA7vd.png");
+  background-image: url("https://izumiihd.github.io/pixelitcdn/assets/background.png");
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
@@ -278,4 +278,10 @@ body {
 .close:hover,
 .close:focus {
   color: red;
+}
+img.emoji {
+   height: 32px;
+   width: 32px;
+   margin: 0 4px 0 4px;
+   vertical-align: -0.1em;
 }
