--- a/public/css/credits.css
+++ b/public/css/credits.css
@@ -113,10 +113,9 @@ body {
   z-index: -9999;
   background-size: 550px;
   background-position: -100px -100px;
-  background-image: url("https://ac.blooket.com/dashboard/assets/BlookCheckers-BykpA7vd.png");
+  background-image: url("https://izumiihd.github.io/pixelitcdn/assets/background.png");
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
-  pointer-events: none;
 }
 .credits-containers {
   display: flex; 
