--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   overflow: hidden;
 }
+
 .bg_img {
   position: fixed;
   width: 250%;
@@ -14,7 +15,7 @@ body {
   z-index: -9999;
   background-size: 550px;
   background-position: -100px -100px;
-  background-image: url("https://ac.blooket.com/dashboard/assets/BlookCheckers-BykpA7vd.png");
+  background-image: url("https://izumiihd.github.io/pixelitcdn/assets/background.png");
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
