--- a/public/css/notifications.css
+++ b/public/css/notifications.css
@@ -3,8 +3,8 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
+
 .bg_img {
   position: fixed;
   width: 250%;
@@ -18,6 +18,7 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
@@ -25,6 +26,7 @@ body {
   border-bottom-right-radius: 0;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -33,36 +35,29 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   text-shadow: #000 1px 0 13px;
-  transition: transform 0.3s ease-in-out;
 }
-.navbar a:hover {
-  transform: rotate(360deg);
+
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
 .title_p {
-  margin-left: 92%;
+  margin-left: 48%;
   position: absolute;
   top: 1%;
   font-size: 26px;
   color: #fff;
   text-shadow: #000 1px 0 13px;
-}
-.button {
-  width: 240px;
-  font-size: 18px;
-  border-radius: 5px;
-  background-color: #6f057a;
-  box-shadow: inset 0 -0.265vw #5a0463, 3px 3px 15px rgba(0, 0, 0, 0.6);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 10px 0;
-  font-family: Pixelify Sans;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-.button:hover {
-  transform: scale(1.1);
-  transition: transform 0.3s ease-in-out;
 }
