--- a/public/css/pixels.css
+++ b/public/css/pixels.css
@@ -14,10 +14,11 @@ body {
   z-index: -9999;
   background-size: 550px;
   background-position: -100px -100px;
-  background-image: url("https://ac.blooket.com/dashboard/assets/BlookCheckers-BykpA7vd.png");
+  background-image: url("https://izumiihd.github.io/pixelitcdn/assets/background.png");
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
@@ -283,6 +284,31 @@ body {
 
 .pixel-details p {
   margin: 5px 0;
+}
+
+.giftButton {
+  position: fixed;
+  bottom: 145px;
+  right: 180px;
+  font-family: Pixelify Sans;
+  padding: 12px 18px;
+  background-color: #6f057a;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  transition: background-color 0.5s ease-in-out, box-shadow 0.3s ease-in-out;
+  width: 440px;
+  box-sizing: border-box;
+  font-size: 26px;
+  text-shadow: -1px -1px 0 black,
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
+  display: inline-block;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .button-group {
