--- a/public/panel/addbadge/badgeadd.css
+++ b/public/panel/addbadge/badgeadd.css
@@ -65,7 +65,7 @@ body {
   z-index: -9999;
   background-size: 550px;
   background-position: -100px -100px;
-  background-image: url("https://ac.blooket.com/dashboard/assets/BlookCheckers-BykpA7vd.png");
+  background-image: url("https://izumiihd.github.io/pixelitcdn/assets/background.png");
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
