--- a/public/panel/news/newsedit.css
+++ b/public/panel/news/newsedit.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   overflow: hidden;
 }
+
 .bg_img {
   position: fixed;
   width: 250%;
@@ -18,6 +19,7 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
@@ -25,6 +27,7 @@ body {
   border-bottom-right-radius: 0;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -36,9 +39,23 @@ body {
   transition: transform 0.3s ease-in-out;
 }
 
-.navbar a:hover {
-  transform: rotate(360deg);
+@media screen and (max-width: 600px) {
+  .navbar {
+    border-radius: 0; 
+    box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
+  }
+  .navbar a, .dropdown .dropbtn {
+    float: none;
+    display: block;
+    padding: 10px;
+  }
+  .dropdown-content {
+    position: relative;
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
+
 .title_p {
   margin-left: 92%;
   position: absolute;
@@ -46,6 +63,12 @@ body {
   font-size: 26px;
   color: #fff;
   text-shadow: #000 1px 0 13px;
+}
+
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
 }
 
 h1 {
