--- a/public/panel/packEditorPage/packeditor.css
+++ b/public/panel/packEditorPage/packeditor.css
@@ -70,12 +70,7 @@ body {
 
 @media screen and (max-width: 600px) {
   .title_p {
-    margin-left: 80%;
-    position: absolute;
-    top: 1%;
-    font-size: 24px;
-    color: #fff;
-    text-shadow: #000 1px 0 13px;
+    display: none;
   }
 }
 
