--- a/public/panel/userManagment/userManager.css
+++ b/public/panel/userManagment/userManager.css
@@ -3,7 +3,7 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: auto;
 }
 .bg_img {
   position: fixed;
@@ -18,11 +18,13 @@ body {
   transform: translate(-50%, -50%) rotate(15deg);
   opacity: 0.1;
 }
+
 .navbar {
   overflow: hidden;
   background-color: #6f057a;
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6)
 }
+
 .navbar a {
   float: left;
   font-size: 16px;
@@ -34,9 +36,11 @@ body {
   transition: transform 0.3s ease-in-out;
 }
 
+
 .navbar a:hover {
   transform: rotate(360deg);
 }
+
 .title_p {
   margin-left: 92%;
   position: absolute;
@@ -44,6 +48,12 @@ body {
   font-size: 26px;
   color: #fff;
   text-shadow: #000 1px 0 13px;
+}
+
+@media screen and (max-width: 600px) {
+  .title_p {
+    display: none;
+  }
 }
 
 .welcome-title {
@@ -66,6 +76,9 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
+
+
+
 .button:hover {
   background-color: #6f057a;
   box-shadow: inset 0 -0.325vw #5a0463, 3px 3px 15px rgba(0, 0, 0, 0.6);
@@ -101,8 +114,15 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
 h1 {
   margin-top: 30px;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    display: block;
+  }
 }
 
 input[type="text"] {
@@ -115,6 +135,12 @@ input[type="text"] {
   margin: 5px;
   font-family: Pixelify Sans;
   font-size: 16px;
+}
+
+@media screen and (max-width: 600px) {
+  input[type="text"] {
+    width: 80%;
+  }
 }
 
 button {
@@ -130,6 +156,11 @@ button {
   font-size: 18px;
 }
 
+@media screen and (max-width: 600px) {
+  button {
+    font-size: 10px;
+  }
+
 .user-action-container {
   display: flex;
   flex-direction: column;
@@ -142,6 +173,17 @@ button {
   left: 3%;
 }
 
+@media screen and (max-width: 600px) {
+  .user-action-container {
+    width: 80%;
+    height: 45%;
+    position: fixed;
+    bottom: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
 .user-input-container {
   display: flex;
   flex-direction: column;
@@ -152,4 +194,15 @@ button {
   background: radial-gradient(circle, #61056b, #6f057a);
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  position: absolute;
   right: 3%;
+}
+
+@media screen and (max-width: 600px) {
+  .user-input-container {
+    width: 80%;
+    height: 30%;
+    position: fixed;
+    bottom: 2%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
