--- a/public/css/home.css
+++ b/public/css/home.css
@@ -212,6 +212,7 @@ body {
   left: 15%; 
   animation: float 3s ease-in-out infinite; 
   cursor: pointer; 
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
@@ -285,6 +286,7 @@ body {
   color: inherit; 
   text-decoration: none; 
   font-size: 2.0em; 
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 .terms-of-service { 
