--- a/public/css/credits.css
+++ b/public/css/credits.css
@@ -134,7 +134,7 @@ body {
   color: white;
   border: none;
   padding: 10px 20px;
-  box-shadow: inset 0 -0.365vw #5a0463, 3px 3px 15px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 -0.225vw #5a0463, 3px 3px 15px rgba(0, 0, 0, 0.6);
   font-family: 'Pixelify Sans';
   text-align: center;
 }
@@ -153,6 +153,7 @@ body {
   height: 100px;
   border-radius: 5px;
   cursor: pointer;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 .credits-container img:hover {
   transform: scale(0.95);
