--- a/public/css/pixels.css
+++ b/public/css/pixels.css
@@ -413,3 +413,9 @@ body {
     border-radius: 10px;
     border: 3px solid #61056b;
 }
+
+.locked {
+  width: 32px;
+  height: 32px;
+  filter: drop-shadow(2px 2px 4px #000000);
+}
