--- a/public/panel/userManagment/userManager.css
+++ b/public/panel/userManagment/userManager.css
@@ -195,3 +195,14 @@ button {
   box-shadow: inset 0 -0.365vw #61056b, 3px 3px 15px rgba(0, 0, 0, 0.6);  position: absolute;
   right: 3%;
 }
+
+@media screen and (max-width: 600px) {
+  .user-input-container {
+    width: 80%;
+    height: 30%;
+    position: fixed;
+    bottom: 2%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
