--- a/public/css/404.css
+++ b/public/css/404.css
@@ -113,6 +113,7 @@ body {
   width: 180px;
   height: 180px;
   cursor: pointer;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 600px) {
